--- a/src/jp/ascendia/application/fbooks/css/Main.css
+++ b/src/jp/ascendia/application/fbooks/css/Main.css
@@ -1,9 +1,7 @@
 @CHARSET "UTF-8";
 
 .root {
-/*	-fx-font-size: 18pt;
-	-fx-background-color: transparent;
-*/	-fx-background-image: url("../image/background.png");
+	-fx-background-image: url("../image/background.png");
 }
 
 .title {
@@ -11,34 +9,70 @@
 	-fx-font-family: sans-serif;
 	-fx-font-weight: bolder;
 	-fx-text-fill: #1e90ff;
-	/*-fx-text-fill: linear-gradient(rgba(240,240,255,0.8), rgba(120,120,255,0.5));*/
-	-fx-effect: dropshadow( two-pass-box , rgba( 0, 0, 120, 1),3, 0, 1, 1 );
-	/*-fx-underline:true;*/
+	-fx-effect: dropshadow(two-pass-box, rgba(0, 0, 120, 1), 3, 0, 1, 1);
+}
+
+.linkBox {
+	-fx-background-color: #eeeeee;
+}
+
+.link {
+	-fx-font-size: 14px;
+	-fx-underline: true;
+	-fx-text-fill: #1e90ff;
+	-fx-alignment: center;
+}
+
+.botton {
+	-fx-font-size: 14px;
+}
+
+.bookHead {
+	-fx-font-size: 18px;
+	-fx-alignment: center-right;
+}
+
+.bookInput {
+	-fx-font-size: 14px;
+}
+
+.message {
+	-fx-font-size: 16px;
+	-fx-text-fill: red;
 }
 
 .fix {
 	-fx-font-size: 16px;
+	-fx-alignment: center;
 }
 
-.logo {
-	-fx-font-size: 24pt;
+#menu {
+	-fx-background-color: #eeeeee;
 }
 
-.logo-department {
-	-fx-font-size: 12pt;
-	-fx-text-fill: #666666;
+#hbox {
+	-fx-font-size: 24px;
 }
 
-.buttonb {
-    -fx-text-fill: #333333;
-    -fx-font-family: "Arial Narrow";
-    -fx-background-color: linear-gradient(#ffffff, #666666);
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+#vbox {
+	-fx-background-color: white;
 }
 
-.buttonb:hover {
-    -fx-text-fill: #999999;
-    -fx-font-family: "Arial Narrow";
-    -fx-background-color: linear-gradient(#ffffff, #cccccc);
-    -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
+#grid {
+	-fx-font-size: 14px;
+}
+
+#line {
+	-fx-stroke:  #1e90ff;
+}
+
+#linkLabel {
+	-fx-font-size: 14px;
+	-fx-underline: true;
+	-fx-text-fill: #1e90ff;
+	-fx-alignment: center;
+}
+
+#outputLabel {
+	-fx-wrap-text: true;
 }
