検索結果にTableViewを使用する。

--- a/src/jp/ascendia/application/fbooks/EditPage.fxml
+++ b/src/jp/ascendia/application/fbooks/EditPage.fxml
@@ -11,7 +11,7 @@
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="750.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="40.0" layoutY="40.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍編集" />
-      <Label fx:id="MsgOutput" layoutX="224.0" layoutY="67.0" prefHeight="30.0" prefWidth="406.0" styleClass="message" />
+      <Label fx:id="msgOutput" layoutX="224.0" layoutY="67.0" prefHeight="30.0" prefWidth="406.0" styleClass="message" />
       <Pane layoutX="57.0" layoutY="87.0" prefHeight="361.0" prefWidth="620.0">
          <children>
             <Label layoutX="2.0" layoutY="24.0" prefHeight="22.0" prefWidth="90.0" styleClass="bookHead" text="※タイトル：" />
@@ -21,10 +21,10 @@
             <Label layoutX="-9.0" layoutY="211.0" prefHeight="22.0" prefWidth="100.0" styleClass="bookHead" text="読書開始日：" />
             <Label layoutX="283.0" layoutY="211.0" prefHeight="22.0" prefWidth="100.0" styleClass="bookHead" text="読書終了日：" />
             <Label layoutX="35.0" layoutY="256.0" prefHeight="22.0" prefWidth="57.0" styleClass="bookHead" text="メモ：" />
-            <TextField fx:id="TitleField" layoutX="105.0" layoutY="21.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
-            <TextField fx:id="AuthorField" layoutX="105.0" layoutY="70.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
-            <TextField fx:id="CompanyField" layoutX="105.0" layoutY="119.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
-            <ComboBox fx:id="GenreCBox" layoutX="105.0" layoutY="168.0" prefWidth="180.0">
+            <TextField fx:id="titleField" layoutX="105.0" layoutY="21.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
+            <TextField fx:id="authorField" layoutX="105.0" layoutY="70.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
+            <TextField fx:id="companyField" layoutX="105.0" layoutY="119.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
+            <ComboBox fx:id="genreCBox" layoutX="105.0" layoutY="168.0" prefWidth="180.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
                      <String fx:value="文学・評論" />
@@ -50,9 +50,9 @@
                   </FXCollections>
                </items>
             </ComboBox>
-            <DatePicker fx:id="ReadStartDate" layoutX="105.0" layoutY="211.0" />
-            <DatePicker fx:id="ReadEndDate" layoutX="393.0" layoutY="211.0" />
-            <TextArea fx:id="MemoArea" layoutX="105.0" layoutY="257.0" prefHeight="60.0" prefWidth="450.0" styleClass="bookInput" />
+            <DatePicker fx:id="readStartDate" layoutX="105.0" layoutY="211.0" />
+            <DatePicker fx:id="readEndDate" layoutX="393.0" layoutY="211.0" />
+            <TextArea fx:id="memoArea" layoutX="105.0" layoutY="257.0" prefHeight="60.0" prefWidth="450.0" styleClass="bookInput" />
             <Label layoutX="105.0" layoutY="334.0" prefHeight="18.0" prefWidth="153.0" styleClass="bookInput" text="※は必須の入力項目です。" />
          </children>
       </Pane>
