--- a/src/jp/ascendia/application/fbooks/SearchPage.fxml
+++ b/src/jp/ascendia/application/fbooks/SearchPage.fxml
@@ -17,7 +17,7 @@
          </children>
       </HBox>
       <Label layoutX="40.0" layoutY="50.0" prefHeight="42.0" prefWidth="153.0" styleClass="title" text="書籍検索" />
-      <Label fx:id="MsgOutput" layoutX="224.0" layoutY="90.0" prefHeight="30.0" prefWidth="406.0" styleClass="message" />
+      <Label fx:id="msgOutput" layoutX="224.0" layoutY="90.0" prefHeight="30.0" prefWidth="406.0" styleClass="message" />
       <Pane layoutX="61.0" layoutY="107.0" prefHeight="157.0" prefWidth="550.0">
          <children>
             <Label layoutX="30.0" layoutY="25.0" prefHeight="22.0" prefWidth="83.0" styleClass="bookHead" text="タイトル：" />
@@ -25,9 +25,9 @@
             <Label layoutX="30.0" layoutY="123.0" prefHeight="22.0" prefWidth="83.0" styleClass="bookHead" text="ジャンル：" />
             <Label layoutX="12.0" layoutY="167.0" prefHeight="22.0" prefWidth="100.0" styleClass="bookHead" text="読書開始日：" />
             <Label layoutX="304.0" layoutY="167.0" prefHeight="22.0" prefWidth="100.0" styleClass="bookHead" text="読書終了日：" />
-            <TextField fx:id="TitleField" layoutX="125.0" layoutY="24.0" prefHeight="30.0" prefWidth="450.0" styleClass="bookInput" />
-            <TextField fx:id="AuthorField" layoutX="125.0" layoutY="74.0" prefHeight="30.0" prefWidth="450.0" styleClass="bookInput" />
-            <ComboBox fx:id="GenreCBox" layoutX="125.0" layoutY="124.0" prefWidth="180.0">
+            <TextField fx:id="titleField" layoutX="125.0" layoutY="24.0" prefHeight="30.0" prefWidth="450.0" styleClass="bookInput" />
+            <TextField fx:id="authorField" layoutX="125.0" layoutY="74.0" prefHeight="30.0" prefWidth="450.0" styleClass="bookInput" />
+            <ComboBox fx:id="genreCBox" layoutX="125.0" layoutY="124.0" prefWidth="180.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
                      <String fx:value="文学・評論" />
@@ -53,8 +53,8 @@
                   </FXCollections>
                </items>
             </ComboBox>
-            <DatePicker fx:id="ReadStartDate" layoutX="125.0" layoutY="168.0" />
-            <DatePicker fx:id="ReadEndDate" layoutX="413.0" layoutY="168.0" />
+            <DatePicker fx:id="readStartDate" layoutX="125.0" layoutY="168.0" />
+            <DatePicker fx:id="readEndDate" layoutX="413.0" layoutY="168.0" />
          </children>
       </Pane>
       <Button layoutX="370.0" layoutY="340.0" mnemonicParsing="false" onAction="#handleButtonActionSearRes" styleClass="botton" text="検索" />
