--- a/src/jp/ascendia/application/fbooks/css/Main.css
+++ b/src/jp/ascendia/application/fbooks/css/Main.css
@@ -46,6 +46,7 @@
 	-fx-alignment: center;
 }
 
+/*
 #linkBox {
 	-fx-background-color: #eeeeee;
 }
@@ -76,3 +77,4 @@
 #outputLabel {
 	-fx-wrap-text: true;
 }
+*/
