--- a/src/jp/ascendia/application/fbooks/Searchresult.fxml
+++ b/src/jp/ascendia/application/fbooks/Searchresult.fxml
@@ -10,27 +10,21 @@
 
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox prefHeight="30.0" styleClass="linkBox" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Label onMouseClicked="#handleButtonActionHomePage" prefHeight="30.0" prefWidth="70.0" styleClass="link" text="ホーム" />
-            <Label onMouseClicked="#handleButtonActionAddPage" prefHeight="30.0" prefWidth="70.0" styleClass="link" text="登録" />
-            <Label onMouseClicked="#handleButtonActionSearchPage" prefHeight="30.0" prefWidth="70.0" styleClass="link" text="検索" />
-         </children>
-      </HBox>
       <Label fx:id="msgOutput" layoutX="34.0" layoutY="43.0" prefHeight="30.0" prefWidth="406.0" styleClass="message" />
       <TableView fx:id="tableView" layoutX="25.0" layoutY="75.0" prefHeight="400.0" prefWidth="735.0">
         <columns>
-          <TableColumn fx:id="titleColumn" minWidth="120.0" maxWidth="120.0" text="タイトル" />
-          <TableColumn fx:id="authorColumn" minWidth="95.0" maxWidth="95.0" text="著者" />
-          <TableColumn fx:id="companyColumn" minWidth="75.0" maxWidth="75.0" text="出版社" />
-          <TableColumn fx:id="genreColumn" minWidth="75.0" maxWidth="75.0" text="ジャンル" />
-          <TableColumn fx:id="readStartColumn" minWidth="80.0" maxWidth="80.0" text="読書開始日" />
-          <TableColumn fx:id="readEndColumn" minWidth="80.0"  maxWidth="80.0" text="読書終了日" />
-          <TableColumn fx:id="memoColumn" minWidth="210.0" maxWidth="210.0" text="メモ" />
+          <TableColumn fx:id="titleColumn" maxWidth="120.0" minWidth="120.0" text="タイトル" />
+          <TableColumn fx:id="authorColumn" maxWidth="95.0" minWidth="95.0" text="著者" />
+          <TableColumn fx:id="companyColumn" maxWidth="75.0" minWidth="75.0" text="出版社" />
+          <TableColumn fx:id="genreColumn" maxWidth="75.0" minWidth="75.0" text="ジャンル" />
+          <TableColumn fx:id="readStartColumn" maxWidth="80.0" minWidth="80.0" text="読書開始日" />
+          <TableColumn fx:id="readEndColumn" maxWidth="80.0" minWidth="80.0" text="読書終了日" />
+          <TableColumn fx:id="memoColumn" maxWidth="210.0" minWidth="210.0" text="メモ" />
         </columns>
       </TableView>
-      <Button fx:id="handleButtonActionEdit" layoutX="338.0" layoutY="506.0" mnemonicParsing="false" onAction="#handleButtonActionEdit" styleClass="botton" text="編集" />
-      <Button fx:id="handleButtonActionDel" layoutX="401.0" layoutY="506.0" mnemonicParsing="false" onAction="#handleButtonActionDel" styleClass="botton" text="削除" />
+      <Button layoutX="308.0" layoutY="506.0" mnemonicParsing="false" onAction="#handleButtonActionEdit" styleClass="botton" text="編集" />
+      <Button layoutX="371.0" layoutY="506.0" mnemonicParsing="false" onAction="#handleButtonActionDel" styleClass="botton" text="削除" />
+      <Button layoutX="434.0" layoutY="506.0" mnemonicParsing="false" onAction="#handleButtonActionClose" styleClass="botton" text="閉じる" />
    </children>
    <stylesheets>
       <URL value="@../fbooks/css/Main.css" />
