--- a/src/jp/ascendia/application/fbooks/Edit.fxml
+++ b/src/jp/ascendia/application/fbooks/Edit.fxml
@@ -21,9 +21,9 @@
             <Label layoutX="-9.0" layoutY="211.0" prefHeight="22.0" prefWidth="100.0" styleClass="bookHead" text="読書開始日：" />
             <Label layoutX="283.0" layoutY="211.0" prefHeight="22.0" prefWidth="100.0" styleClass="bookHead" text="読書終了日：" />
             <Label layoutX="35.0" layoutY="256.0" prefHeight="22.0" prefWidth="57.0" styleClass="bookHead" text="メモ：" />
-            <TextField fx:id="titleField" layoutX="105.0" layoutY="21.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
-            <TextField fx:id="authorField" layoutX="105.0" layoutY="70.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
-            <TextField fx:id="companyField" layoutX="105.0" layoutY="119.0" prefHeight="30.0" styleClass="bookInput" prefWidth="450.0" />
+            <TextField fx:id="titleField" layoutX="105.0" layoutY="21.0" prefHeight="30.0" prefWidth="450.0" styleClass="bookInput" />
+            <TextField fx:id="authorField" layoutX="105.0" layoutY="70.0" prefHeight="30.0" prefWidth="450.0" styleClass="bookInput" />
+            <TextField fx:id="companyField" layoutX="105.0" layoutY="119.0" prefHeight="30.0" prefWidth="450.0" styleClass="bookInput" />
             <ComboBox fx:id="genreCBox" layoutX="105.0" layoutY="168.0" prefWidth="180.0">
                <items>
                   <FXCollections fx:factory="observableArrayList">
@@ -53,7 +53,7 @@
             <DatePicker fx:id="readStartDate" layoutX="105.0" layoutY="211.0" />
             <DatePicker fx:id="readEndDate" layoutX="393.0" layoutY="211.0" />
             <TextArea fx:id="memoArea" layoutX="105.0" layoutY="257.0" prefHeight="60.0" prefWidth="450.0" styleClass="bookInput" />
-            <Label layoutX="105.0" layoutY="334.0" prefHeight="18.0" prefWidth="153.0" styleClass="bookInput" text="※は必須の入力項目です。" />
+            <Label layoutX="105.0" layoutY="334.0" prefHeight="19.0" prefWidth="193.0" styleClass="bookInput" text="※は必須の入力項目です。" />
          </children>
       </Pane>
       <Button layoutX="325.0" layoutY="451.0" mnemonicParsing="false" onAction="#handleButtonActionEdit" styleClass="botton" text="更新" />
